#125 fix: 팀 서비스 분리